--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 </head>
 <body>
 
-    <section class="carousel">
+    <section 
+    class="carousel"
+    @mouseenter="stopAutoPlay"
+    @mouseleave="autoPlay"
+    tabindex="0"
+    @keyup.right="nextSlide"
+    @keyup.left="prevSlide"
+    >
         <!-- Images -->
         <div class="images">
             <!-- genera con vue -->
